<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-47dp"
        tools:layout_editor_absoluteY="357dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/login_text1"
            android:textColor="@color/black"
            android:textSize="50sp"

            />



        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:autofillHints="username"
            android:background="@drawable/edt_sty1"
            android:hint="@string/username"
            android:inputType="text"
            android:layout_marginTop="40dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:paddingStart="20sp"
            android:textSize="20sp"
            tools:ignore="LabelFor,RtlSymmetry"
            android:layout_below="@+id/text"
            android:textColorHint="#D8D8D8"

            />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@+id/edit_username"
            android:layout_marginStart="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="45dp"
            android:autofillHints="password"
            android:background="@drawable/edt_sty1"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20sp"
            android:textColorHint="#D8D8D8"
            android:textSize="20sp"
            tools:ignore="LabelFor,RtlSymmetry" />
        <Button
            android:id="@+id/button_login"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_below="@+id/edit_password"
            android:layout_marginTop="45dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/login_button"
            android:text="@string/login_tar"
            android:textSize="35sp"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/login_resign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textSize="15sp"
            android:text="@string/resign"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"

            />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>